<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vuforia.samples.Catchvertd.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/catchertd"
            android:id="@+id/imageView1"
            android:contentDescription=" " />

        <TextView
            android:id="@+id/titleMain"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/stringRegistro"
            android:textAlignment="center"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/txtRegistroUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stringRegistroNombre"
            android:text="@string/stringRegNombre"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtRegistroUsuarioApe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stringRegistroApellido"
            android:text="@string/stringRegApellido"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txtRegistroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/stringRegistroEmail"
            android:text="@string/stringRegEmail"
            android:inputType="textEmailAddress"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtRegistroPassword"
            android:hint="@string/stringRegistroContrasena"
            android:text="@string/stringRegPassword"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtRegistroRePassword"
            android:textAlignment="center"
            android:hint="@string/stringRegistroConfirmarContrasena"
            android:text="@string/stringRegRePassword" />

        <Button
            android:text="@string/stringRegistroEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/butRegEnviar"
            android:textColor="@android:color/background_light"
            android:background="@android:color/holo_green_dark" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/promociones"
            android:id="@+id/imgRegImgFoot"
            android:contentDescription=" " />

    </LinearLayout>
</RelativeLayout>
