<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_catchvertd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vuforia.samples.Catchvertd.LoginCatchvertd">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layoutLoginCatchvertd"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/catchertd"
            android:id="@+id/imgLogin"
            android:contentDescription=""
            android:layout_weight="0.43" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtUsuarioLogin"
            android:layout_weight="0.08"
            android:hint="Usuario"
            android:text="@string/stringUsuarioLogin"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtClaveLogin"
            android:layout_weight="0.08"
            android:hint="Clave"
            android:text="@string/stringClaveLogin" />

        <Button
            android:text="@string/stringbutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/butLogin"
            android:layout_weight="0.07"
            android:background="@color/accent_material_light"
            android:textColor="@color/background_floating_material_light"
            android:textStyle="normal|bold"
            android:textSize="24sp" />

        <TextView
            android:text="@string/stringRegistroLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblRegistroLogin"
            android:layout_weight="0.06"
            android:textSize="18sp"
            android:textStyle="normal|bold"/>

        <TextView
            android:text="@string/stringRecordarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblRecoveryLogin"
            android:layout_weight="0.09"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textAlignment="center" />
    </LinearLayout>
</RelativeLayout>
